header is now fixed height to stop jumping. slight update on skills

--- a/site.css
+++ b/site.css
@@ -8,6 +8,7 @@ body {
 
 div.header {
     background-color: black;
+    height: 412px;
     margin: 0;
     padding: 0;
 }
